Bug 155345 - Hide deleted columns in Hide Changes mode
Summary: Hide deleted columns in Hide Changes mode
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0
Keywords:
Depends on:
Blocks: Track-Changes-Table
  Show dependency treegraph
 
Reported: 2023-05-16 07:57 UTC by NISZ LibreOffice Team
Modified: 2023-08-03 12:53 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2023-05-16 07:57:36 UTC
Description:
Hide deleted columns in Hide Changes mode

Steps to Reproduce:
1. Insert a 3x3 table
2. Edit -> track changes -> Record Off
3. Delete a column with delete column button.

Actual Results:
Not hiding deleted columns in Hide Changes mode

Expected Results:
Hide deleted columns in Hide Changes mode


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 6f1534940ac12ff8e46f4782e18cfb6cf585da39
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 Commit Notification 2023-05-17 17:46:06 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/aff269c18b9029fec992135a406dc5031927c401

tdf#155345 sw tracked table column: hide them in Hide Changes mode

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.