tdf#155345 sw tracked table column: hide them in Hide Changes mode

And if all columns are deleted, hide the table in Hide Changes mode.

Follow-up to commit ffd8d20d368a885d6d786749278fa438573227a7
"tdf#150673 sw xmloff: import/export tracked table column" and
commit f481c2c8e74bded11fac754e493560391229dbcd
"tdf#144057 sw track changes: hide deleted table rows".

Change-Id: Ic8f0254d607d629ed6386df94b16a939cde17506
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151805
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>